# codevetter

./: .gitignore  PROJECT_STATUS.md  README.md  STATUS.md  agents.md  biome.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/examples/: mcp_fixture.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs  talk.rs
apps/desktop/src-tauri/src/agent/: brain.rs  browser.rs  cli_brain.rs  local_server.rs  prompts.rs  runner.rs  types.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  agent_memories.rs  agent_stream.rs  agent_terminal.rs  audience_validation.rs  blast_radius.rs  codex_app_server.rs  deterministic_review.rs  differential_verification.rs  dora.rs  evidence_pattern.rs  files.rs  git.rs  github_ops.rs  graph_trust.rs  history.rs  intel.rs  mcp_access.rs  mod.rs  native_agent_island.rs  observability.rs  perf_bench.rs  preferences.rs  procedure_events.rs  resources.rs  review.rs  saas_maker.rs  sandbox.rs  scenario_compiler_bridge.rs  secret_policy.rs  session_adapters.rs  session_intelligence.rs  sessions.rs  synthetic_qa.rs  talks.rs  taste.rs  tray.rs  trex_watcher.rs  unpack.rs  unpack_analysis.rs  (+5 more)
apps/desktop/src-tauri/src/commands/business_rule_archaeology/: adapter.rs  adapter_tests.rs  assembly_adapter.rs  assembly_adapter_tests.rs  cleanup_command.rs  cobol_adapter.rs  cobol_adapter_tests.rs  contracts.rs  contracts_tests.rs  correctness_qualification.rs  deterministic_rules.rs  evidence_store.rs  export.rs  fixtures_tests.rs  graph.rs  identity.rs  identity_store.rs  identity_store_tests.rs  identity_tests.rs  invalidation.rs  invalidation_store.rs  invalidation_store_tests.rs  invalidation_tests.rs  inventory.rs  jobs.rs  legacy.rs  lifecycle.rs  lifecycle_store.rs  lifecycle_store_tests.rs  lifecycle_tests.rs  mod.rs  modern_adapter.rs  modern_adapter_tests.rs  qualification_benchmark.rs  qualification_comparison.rs  qualification_comparison_tests.rs  read.rs  read_temporal.rs  read_tests.rs  refresh_command.rs  (+8 more)
apps/desktop/src-tauri/src/commands/history_evidence/: mod.rs  service.rs  types.rs
apps/desktop/src-tauri/src/commands/history_graph/: api.rs  delta.rs  git_objects.rs  history_facts.rs  history_facts_tests.rs  inflections.rs  mod.rs  query_helpers.rs  state.rs  storage.rs  tests.rs
apps/desktop/src-tauri/src/commands/history_query/: mod.rs  types.rs
apps/desktop/src-tauri/src/commands/history_read/: annotations.rs  api.rs  contributors.rs  contributors_tests.rs  evidence.rs  explain.rs  landmarks.rs  mod.rs  releases.rs  search.rs  state.rs  status.rs  temporal.rs  (+1 more)
apps/desktop/src-tauri/src/db/: archaeology_schema.rs  history_graph_schema.rs  mcp_schema.rs  mod.rs  queries.rs  schema.rs  structural_graph_schema.rs
apps/desktop/src-tauri/src/mcp/: contracts.rs  cursor.rs  limits.rs  mod.rs  sanitize.rs  uri.rs  validation.rs
apps/desktop/src-tauri/tests/: mcp_stdio.rs
(+741 files in other folders)
