[package]
name = "codevetter-desktop"
version = "0.1.0"
edition = "2021"
description = "CodeVetter Desktop — code review + agent management"
default-run = "codevetter-desktop"

[[bin]]
name = "codevetter-desktop"
path = "src/main.rs"

[[bin]]
name = "codevetter-mcp"
path = "src/bin/codevetter-mcp.rs"

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled", "hooks"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
# Immutable historical graphs and commit deltas are large, repetitive JSON.
# zlib keeps local history bounded without duplicating the normalized live graph tables.
flate2 = "1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
futures = { version = "0.3", optional = true }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
jwalk = "0.8"
rayon = "1.10"
libc = "0.2"
portable-pty = "0.9.0"
tree-sitter = "0.26.3"
tree-sitter-c = "0.24.0"
tree-sitter-c-sharp = "0.23.0"
tree-sitter-cpp = "0.23.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin = { package = "tree-sitter-kotlin-sg", version = "0.4.1" }
tree-sitter-php = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.0"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.7.0"
tree-sitter-typescript = "0.23.2"
# Official MCP lifecycle/framing/schema implementation. Only local stdio server
# features are enabled: no HTTP transport, OAuth, client, or network stack.
rmcp = { version = "=2.2.0", default-features = false, features = ["server", "transport-io", "macros"] }

[dev-dependencies]
# In-process protocol client and temporary repositories are test-only; the
# shipped sidecar keeps the minimal server/stdio feature set above.
rmcp = { version = "=2.2.0", default-features = false, features = ["client", "server", "transport-io"] }
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 0

[profile.test]
debug = 1

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Live browser agent: drives real Chrome via chromiumoxide. Kept out of the
# default build to shrink dev compiles; releases must pass --features browser-agent.
browser-agent = ["dep:chromiumoxide", "dep:futures"]
